@startuml
' Focused Domain Model for US235 - List Show Requests of Client

' Entities
entity "Customer" as Customer {
* id : String <<generated>>
  --
* name : String
* status : String <<enum>> {active, VIP, inactive}
  }

entity "ShowRequest" as ShowRequest {
* id : String <<generated>>
  --
* numberOfDrones : Integer
* duration : Integer
* creationDate : DateTime
* status : String
  }

entity "ShowDescription" as ShowDescription {
* place : String
* latitude : Double
* longitude : Double
* time : DateTime
  }

entity "ShowRequestStatus" as ShowRequestStatus {
* status : String
* timestamp : DateTime
* changedBy : String
  }

' Relationships
Customer ||--o{ ShowRequest : requests
ShowRequest ||--o| ShowDescription : describes
ShowRequest ||--o{ ShowRequestStatus : hasStatus

' Notes on constraints
note right of Customer: Can be active, VIP, or inactive
note right of ShowRequestStatus: Most recent status displayed
note right of ShowRequest: Sorted by creationDate (descending)

@enduml